[tool.poetry]
name = "fastapi-jinja-utils"
version = "1.0rc0"
description = ""
authors = ["Tyler M Kontra <tyler@tylerkontra.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
